# mysthea-app

./: .gitattributes  .gitignore  .qmake.conf  CMakeLists.txt  LICENSE  README.md  cards-translation-data.csv  mysthea-app.pro
src/: CMakeLists.txt  assets.qrc  attunement.qrc  blue-cards.qrc  cards.qrc  configurations.qrc  encounter-back.qrc  encounter.qrc  era-i.qrc  era-ii.qrc  era-iii.qrc  era-x.qrc  event.qrc  fonts.qrc  gray-cards.qrc  green-cards.qrc  hero.qrc  icaion-assets.qrc  icaion-cards.qrc  ios-translations.qrc  main.cpp  mysthea-assets.qrc  mysthea-cards.qrc  qml.qrc  qtquickcontrols2.conf  red-cards.qrc  src.pri  src.pro  system.cpp  system.h  thefall-assets.qrc  thefall-cards.qrc  translations.qrc  translationsmanager.cpp  translationsmanager.h  yellow-cards.qrc
src/android/: AndroidManifest.xml  build.gradle  gradle.properties  local.properties~
src/android/res/drawable/: splash.xml
src/android/res/mipmap-anydpi-v26/: ic_launcher.xml
src/android/res/values/: colors.xml  ic_launcher_background.xml  styles.xml
src/configurations/: icaion-cards.js  icaion_configuration.json  mysthea_configuration.json  the_fall_configuration.json  thefall-cards.js
src/ios/: Info.plist
src/ios/Images.xcassets/AppIcon.appiconset/: Contents.json
src/ios/Images.xcassets/LaunchImage.launchimage/: Contents.json
src/ios/helpers/: nativeidentifier.h  nativeidentifier.mm
src/models/: artworks_data.h  artworksfiltermodel.cpp  artworksfiltermodel.h  artworksmodel.cpp  artworksmodel.h  card_data.h  cardsmodel.cpp  cardsmodel.h  cardsproxymodel.cpp  cardsproxymodel.h  commandcomboboxmodel.cpp  commandcomboboxmodel.h  commandlistmodel.cpp  commandlistmodel.h  data.h  icaiontypeproxymodel.cpp  icaiontypeproxymodel.h  miniatures_data.h  miniaturesfiltermodel.cpp  miniaturesfiltermodel.h  miniaturesmodel.cpp  miniaturesmodel.h  mystheatypeproxymodel.cpp  mystheatypeproxymodel.h  searchmodel.cpp  searchmodel.h  thefalltypeproxymodel.cpp  thefalltypeproxymodel.h  typecomboboxmodel.cpp  typecomboboxmodel.h  typemodel.cpp  typemodel.h  typeproxymodel.cpp  typeproxymodel.h  typeslistmodel.cpp  typeslistmodel.h
src/qml/: main.qml
src/qml/Icaion/: Artwork.qml  CardDetailDelegate.qml  CardsReference.qml  Extras.qml  ExtrasMenu.qml  GameSetup.qml  GameSetupMap.qml  GameSetupModel.qml  Lore.qml  LoreHeading.qml  LoreModel.qml  LoreParagraph.qml  LoreTitle.qml  Miniatures.qml  PredeterminedSteps.qml  Rulebook.qml  qmldir
src/qml/Mysthea/: Artwork.qml  ArtworkGrid.qml  CardDetail.qml  CardDetailDelegate.qml  CardsList.qml  CardsReference.qml  CardsReferencePage.qml  DetailDelegate.qml  Extras.qml  ExtrasMenu.qml  GameSetup.qml  GameSetupMap.qml  GameSetupModel.qml  LanguageListModel.qml  Lore.qml  LoreModel.qml  Miniatures.qml  Rulebook.qml  TableOfContents.qml  TableOfContentsModel.qml  qmldir
src/qml/Mysthea/Components/: AppContainer.qml  Button.qml  ColorComboBox.qml  Header.qml  MainDrawer.qml  ProjectButton.qml  RadioButton.qml  RadioIndicator.qml  RoundButton.qml  RulebookButton.qml  ScrollIndicator.qml  SearchField.qml  TextIconComboBox.qml  qmldir
src/qml/Mysthea/Pages/: CardsList.qml  CardsReferencePage.qml  Credits.qml  DetailDelegate.qml  DetailPage.qml  GameSetup.qml  GameSetupMap.qml  GameSetupModel.qml  GameSetupStep.qml  Language.qml  LanguageListModel.qml  Lore.qml  LoreModel.qml  MainMenu.qml  MockList.qml  PageName.qml  Rulebook.qml  SearchPage.qml  TableOfContents.qml  TableOfContentsModel.qml  qmldir
src/qml/Mysthea/Theme/: Icon.qml  Palette.qml  qmldir
src/qml/TheFall/: Artwork.qml  CardDetailDelegate.qml  CardsReference.qml  Extras.qml  ExtrasMenu.qml  GameSetup.qml  GameSetupMap.qml  GameSetupModel.qml  Lore.qml  LoreModel.qml  Miniatures.qml  Rulebook.qml  qmldir
src/style/MystheaUniverse/: ComboBox.qml  PageIndicator.qml  RoundButton.qml  TabBar.qml  TabButton.qml  ToolBar.qml  ToolButton.qml
src/style/MystheaUniverse/Components/: AccordionItemDelegate.qml  AppContainer.qml  AppDrawer.qml  ArtworkGrid.qml  BackAction.qml  Button.qml  CardDetailDelegate.qml  CardsFiltersHeader.qml  CardsList.qml  DropCapLabel.qml  ExtrasButton.qml  ExtrasMenu.qml  Header.qml  ImageButton.qml  LabelComboBox.qml  LoreHeading.qml  LoreParagraph.qml  LoreTitle.qml  MainDrawer.qml  MiniaturesGrid.qml  ProjectButton.qml  RadioButton.qml  RoundButton.qml  RoundedImage.qml  RulebookButton.qml  SearchField.qml  TextIconComboBox.qml  qmldir
src/style/MystheaUniverse/Pages/: CardDetail.qml  CardNotFound.qml  CardsBasePage.qml  CardsReference.qml  Extras.qml  GameSetup.qml  Lore.qml  MainMenu.qml  PageName.qml  Rulebook.qml  StackPage.qml  qmldir
src/style/MystheaUniverse/Theme/: Icon.qml  (+2 more)
src/translations/: icaion.js  mysthea.js  mysthea_de.qm  mysthea_de.ts  mysthea_en.qm  mysthea_en.ts  mysthea_es.qm  mysthea_es.ts  mysthea_fr.qm  mysthea_fr.ts  mysthea_it.qm  mysthea_it.ts  mysthea_ja.qm  mysthea_ja.ts  mysthea_jp.qm  mysthea_jp.ts  mysthea_pl.qm  mysthea_pl.ts  thefall.js
tests/: CMakeLists.txt  tst_icaionartworksproxymodel.cpp  tst_icaionminiaturesproxymodel.cpp  tst_icaiontypeproxymodel.cpp  tst_mystheaartworksproxymodel.cpp  tst_mystheaminiaturesproxymodel.cpp  tst_mystheatypeproxymodel.cpp  tst_thefallartworksproxymodel.cpp  tst_thefalltypeproxymodel.cpp
tests/auto/: auto.pro
tests/auto/icaionartworksmodel/: icaionartworksmodel.pro  tst_icaionartworksproxymodel.cpp
tests/auto/icaionminiaturesmodel/: icaionminiaturesmodel.pro  tst_icaionminiaturesproxymodel.cpp
tests/auto/icaiontypemodel/: icaiontypemodel.pro  tst_icaiontypeproxymodel.cpp
tests/auto/mystheaartworksmodel/: mystheaartworksmodel.pro  tst_mystheaartworksproxymodel.cpp
tests/auto/mystheaminiaturesmodel/: mystheaminiaturesmodel.pro  tst_mystheaminiaturesproxymodel.cpp
tests/auto/mystheatypemodel/: mystheatypemodel.pro  tst_mystheatypeproxymodel.cpp
tests/auto/searchmodel/: searchmodel.pro  tst_searchmodel.cpp
tests/auto/thefallartworksmodel/: thefallartworksmodel.pro  tst_thefallartworksproxymodel.cpp
tests/auto/thefalltypemodel/: thefalltypemodel.pro  tst_thefalltypeproxymodel.cpp
(+44 files in other folders)
